# auto-face-align

./: .gitignore  LICENSE.txt  MANIFEST.in  OLD_INSTALLATION_INSTRUCTIONS.txt  README.md  REQUIREMENTS_LINKS  pyproject.toml  quick_install_for_debugging.sh  setup.py
alignfaces/: Makefile  install-generic.rtf  install-macos.rtf  requirements.txt  requirements_python_3_6.txt  requirements_python_3_9.txt  setup_old.py  test_set.py
demos/demo_1_alignment/: LICENSE_COLLAGE_MAKER  README.md  confirm_alignment_in_matlab.m  for-nim-person.py  make_collages.py  pawarp.m  run_demo.py  test_warp_in_matlab.m
demos/demo_2_morphing/: README.md  run_demo.py  run_demo_.py  run_demo_copy.py
demos/demo_3_averaging/: README.md  make_figures.py  run_demo.py
results/: README.md  analyse-centroids.py  get_eye_distances_original.py  landmark-dist.key  landmark_variance.py  make_figures.py  make_figures_nim.py  nim_1_preprocessing.py  nim_1b_table_of_bad_lm.R  nim_1b_table_of_bad_lm.py  nim_2_main.py  nim_3_additional.py  nim_stim_organize.sh  notes.txt  results_1_preprocessing.py  results_1_preprocessing_temp.py  results_2_main.py  results_3_additional.py  table-DLIB-bad-landmarks-NIM.csv  table-DLIB-failures-NIM.csv  table-DLIB-failures.csv  table-eye-distances.csv  table-wide-DLIB-bad-landmarks-NIM.csv  temp_update_landmarks_file.py
results/CAS-female/: landmarks.txt
results/CAS-female-aligned/: landmarks.txt
results/CAS-male/: landmarks.txt
results/CAS-male-aligned/: landmarks.txt
results/GUFD-female-aligned/: landmarks.txt
results/GUFD-male-aligned/: landmarks.txt
(+123 files in other folders)
